--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
         </div>
       </div>
     </div>
+    <small style="text-align: center"><a href="https://github.com/Nolanga" target="_blank">Open-source code</a>, by Nomthandazo Langa</small>
+</div>
     <script src="src/script.js"></script>
   </body>
 </html>
